[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://moonshot-assets/music/gameover-sound/gameover.wav" type="AudioStream" id=5]
[ext_resource path="res://moonshot-assets/music/background-music/GameMusic_ForestTheme_24.ogg" type="AudioStream" id=6]
[ext_resource path="res://Moon.tscn" type="PackedScene" id=7]
[ext_resource path="res://GameBackground.tscn" type="PackedScene" id=8]
[ext_resource path="res://moonshot-assets/music/sheep-sounds/sheepHit.wav" type="AudioStream" id=9]
[ext_resource path="res://moonshot-assets/music/win-sound/Komiku_-_11_-_Trop_la_win.wav" type="AudioStream" id=10]
[ext_resource path="res://moonshot-assets/music/sheep-sounds/sheepBleet-1.wav" type="AudioStream" id=11]
[ext_resource path="res://moonshot-assets/music/grass-sounds/sfx_step_grass_r.ogg" type="AudioStream" id=12]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 887.359, -552.667, 0, 0, 0, 0, 898, -309.047, 0, 0, 0, 0, 899.132, -181.515, 0, 0, 0, 0, 898.906, -21.2812, 0, 0, 0, 0, 901.17, 116.062, 0, 0, 0, 0, 900.944, 201.083, 0, 0, 0, 0, 901.17, 263.215, 0, 0, 0, 0, 899.698, 287.74, 0, 0, 0, 0, 897.321, 299.185, 0, 0, 0, 0, 890.982, 310.631 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
Mob = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -6.10352e-05
margin_bottom = -6.10352e-05
color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameBackground" parent="." instance=ExtResource( 8 )]
margin_left = -2.1189
margin_top = 3.17831
margin_right = -2.1189
margin_bottom = 3.17834

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 50, 304 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PlayerStartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 50, 300 )

[node name="MobPath" type="Path2D" parent="."]
position = Vector2( -7425.5, 386.848 )
scale = Vector2( 9.3591, 0.647976 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 887.359, -552.667 )
rotation = 1.52715

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="GameoverSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="SheepHitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="WinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="SheepWinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[node name="StepGrassSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -10.0

[node name="Moon" parent="." instance=ExtResource( 7 )]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="moon_land" from="Player" to="." method="next_stage"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="PlayerStartTimer" to="." method="_on_PlayerStartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
